[package]
name = "ax1600i"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
libusb = "0.3"
crc = "3.0.1"
bit-vec = "0.8.0"

[patch.crates-io]
bit-vec = { git = "https://github.com/contain-rs/bit-vec", branch = "v0.8.0" }
libusb = { git = "https://github.com/Rex-Sanchez/libusb-rs", branch = "master" }

